--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,83 @@
 group 'com.github.johan-backstrom'
-version '1.0-SNAPSHOT'
+version '1.0.1-SNAPSHOT'
 
+apply plugin: 'maven'
+apply plugin: 'signing'
 apply plugin: 'java'
 
 sourceCompatibility = 1.8
+archivesBaseName = 'data-cow'
 
 repositories {
     mavenCentral()
 }
 
+task javadocJar(type: Jar) {
+    classifier = 'javadoc'
+    from javadoc
+}
+
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives javadocJar, sourcesJar
+}
+
+signing {
+    sign configurations.archives
+}
+
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
+
+            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
+
+            pom.project {
+                name 'data-cow'
+                packaging 'jar'
+                // optionally artifactId can be defined here
+                description 'A java tool for generating random but internally consistent sets of test data'
+                url 'https://johan-backstrom.github.io/data-cow/'
+
+                scm {
+                    connection 'scm:git@github.com:johan-backstrom/data-cow.git'
+                    developerConnection 'scm:git@github.com:johan-backstrom/data-cow.git'
+                    url 'http://foo.googlecode.com/svn/trunk/'
+                }
+
+                licenses {
+                    license {
+                        name 'The Apache License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id 'johan-backstrom'
+                        name 'Johan Bäckström'
+                    }
+                }
+            }
+        }
+    }
+}
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile group: 'org.jgrapht', name: 'jgrapht-core', version: '1.0.1'
-    testCompile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.6'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.6'
     compile group: 'com.google.guava', name: 'guava', version: '22.0'
-
-
 }
