--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'com.github.johan-backstrom'
-version '2.0.0-SNAPSHOT'
+version '2.0.0'
 
 apply plugin: 'maven'
 apply plugin: 'signing'
@@ -75,7 +75,6 @@ uploadArchives {
     }
 }
 */
-
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
