Fixed strange feature where generators had to implement 'Generators' interface and added tests

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-signing.keyId=
+signing.keyId=99591C44
 signing.password=
-signing.secretKeyRingFile=
-ossrhUsername=
+signing.secretKeyRingFile=/home/johan/.gnupg/secring.gpg
+ossrhUsername=johan-backstrom
 ossrhPassword=
